--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,22 @@ blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+colorama==0.4.6
 decorator==5.1.1
 defusedxml==0.7.1
 discord-webhook==1.3.1
 docopt==0.6.2
+emoji==2.14.0
 executing==2.1.0
 fastapi==0.115.4
 fastjsonschema==2.20.0
+ffmpeg-python==0.2.0
 Flask==3.0.3
 frozenlist==1.5.0
+future==1.0.0
 h11==0.14.0
 idna==3.10
+imageio-ffmpeg==0.5.1
 ipython==8.12.3
 itsdangerous==2.2.0
 jedi==0.19.2
@@ -41,6 +46,8 @@ multidict==6.1.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
+nextcord==2.6.0
+numpy==2.1.3
 packaging==24.2
 pandocfilters==1.5.1
 parso==0.8.4
@@ -52,16 +59,18 @@ prompt_toolkit==3.0.48
 propcache==0.2.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-py-cord==2.6.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pywin32==308
 pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.21.0
+self==2020.12.3
+setuptools==75.4.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -78,5 +87,3 @@ webencodings==0.5.1
 Werkzeug==3.1.3
 yarg==0.1.9
 yarl==1.17.1
-nextcord~=2.6.0
-emoji~=2.14.0
